AKS/ingress-controller/aks-aspnetcore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample
  # namespace: ingress-test
  labels:
    app: sample
spec:
  replicas: 1
  template:
    metadata:
      name: sample
      labels:
        app: sample
    spec:
      containers:
      - name: sample
        image: mcr.microsoft.com/dotnet/samples:aspnetapp
        ports:
          - containerPort: 80
  selector:
    matchLabels:
      app: sample
---
apiVersion: v1
kind: Service
metadata:
  name: sample
  # namespace: ingress-test
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
  selector:
    app: sample
